@@ -21,6 +21,7 @@ package xyz.zedler.patrick.doodle.activity;
 
 import android.content.Intent;
 import android.graphics.drawable.LayerDrawable;
+import android.os.Build;
 import android.os.Bundle;
 import android.os.Handler;
 import android.os.Looper;
@@ -37,6 +38,11 @@ public class SplashActivity extends AppCompatActivity {
     super.onCreate(bundle);
 
     new SystemBarBehavior(this).setUp();
+
+    if (Build.VERSION.SDK_INT < Build.VERSION_CODES.M) {
+      startSettingsActivity();
+      return;
+    }
 
     LayerDrawable splashContent = (LayerDrawable) ResourcesCompat.getDrawable(
         getResources(), R.drawable.splash_content, null
